# dfl-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  test.yml
src/: download.rs  downloader.rs  elapsed.rs  lib.rs  main.rs  network.rs  sources.rs  utils.rs
