[package]
name = "dfl-cli"
version = "1.2.1"
edition = "2021"

[lib]
name = "modules"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
indicatif = {version = "*", features = ["rayon"]}
regex = "1.9.5"
reqwest = "0.11.20"
serde_json = "1.0.107"
tokio = { version = "1.15.0", features = ["full"] }
urlencoding = "2.1.3"
invidious = { version = "0.7.2", no-default-features = true, features = ["reqwest_async"] }
url = "2.2.2"
hyper = "0.14.27"
